[package]
name = "polkadot-test-service"
version = "0.9.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.2"
tracing = "0.1.26"
rand = "0.8.3"
tempfile = "3.2.0"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
serde_json = "1.0.61"
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
tokio = { version = "0.2", features = ["macros"] }
