[package]
name = "polkadot-test-service"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.3"
tracing = "0.1.29"
rand = "0.8.3"
tempfile = "3.2.0"
tokio = "1.12.0"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "ao-polkadot-v0.9.12-revert-9964" }
serde_json = "1.0.67"
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
tokio = { version = "1.12", features = ["macros"] }
