[package]
name = "remote-ext-tests-bags-list"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-runtime = { version = "0.9.8", path = "../../../runtime/polkadot" }
kusama-runtime = { version = "0.9.8", path = "../../../runtime/kusama" }

pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
pallet-bags-list = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
tokio = { version = "1", features = ["macros"] }
log = { version = "0.4.14" }
structopt = {version = "0.3.23" }
