[package]
name = "xcm-simulator-example"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Examples of xcm-simulator usage."
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
paste = "1.0.5"

frame-system = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }

xcm = { path = "../../" }
xcm-simulator = { path = "../" }
xcm-executor = { path = "../../xcm-executor" }
xcm-builder = { path = "../../xcm-builder" }
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-core-primitives = { path = "../../../core-primitives"}
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }
polkadot-parachain = { path = "../../../parachain" }
