[package]
name = "polkadot-simnet"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
benchmarking = { package = "frame-benchmarking", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }

test-runner = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }

sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }

polkadot-primitives = { path = "../../../../primitives" }
polkadot-cli = { path = "../../../../cli", features = ["cli"] }
polkadot-service = { path = "../../../../node/service" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
polkadot-runtime-common = { path = "../../../../runtime/common" }

codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.22"

[dev-dependencies]
log = "0.4.14"
