[package]
name = "polkadot-simnet"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
benchmarking = { package = "frame-benchmarking", git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }

test-runner = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }

sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }

polkadot-primitives = { path = "../../../../primitives" }
polkadot-cli = { path = "../../../../cli", features = ["cli"] }
polkadot-service = { path = "../../../../node/service" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
polkadot-runtime-common = { path = "../../../../runtime/common" }

codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.22"

[dev-dependencies]
log = "0.4.14"
